--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="show_icon_checkbox">Show Icons</string>
     <string name="start_on_boot_checkbox">Start on Boot</string>
     <string name="delay_textview">Delay</string>
+    <string name="no_notification_permission">This app is useless without notification permission.</string>
 </resources>
