--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">StatusBarNetSpeed</string>
+    <string name="app_name">OpenNetSpeed</string>
     <string name="enable_switch">Enable</string>
     <string name="show_icon_checkbox">Show Icons</string>
     <string name="start_on_boot_checkbox">Start on Boot</string>
